More (possible) shortcut actions
 * AppHide
 * FocusEditor
 * FocusNotesList
 * FocusGlobalSearch
 * FocusFolderList

--> closes #19

--- a/Source/AlephNote.App/WPF/Controls/NotesViewHierachical.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewHierachical.xaml
@@ -96,7 +96,7 @@
 			
 		</TreeView>
 
-		<GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Height="3" />
+		<GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Height="3" Focusable="False"/>
 
 		<ListView x:Name="HierachicalNotesList" Grid.Row="2"
 					  AllowDrop="True"
