--- a/Source/AlephNote.App/WPF/Controls/SearchBox.xaml
+++ b/Source/AlephNote.App/WPF/Controls/SearchBox.xaml
@@ -1,34 +1,48 @@
 ﻿<UserControl x:Class="AlephNote.WPF.Controls.SearchBox"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+			 xmlns:conv="clr-namespace:AlephNote.WPF.Converter"
 			 xmlns:controls="clr-namespace:AlephNote.WPF.Controls"
 			 mc:Ignorable="d" 
-             d:DesignHeight="28" d:DesignWidth="500">
+			 d:DesignHeight="28" d:DesignWidth="500">
 
-	<Grid Background="Gainsboro" x:Name="MainGrid">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="999*" MaxWidth="300"/>
-			<ColumnDefinition Width="2"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="*" MinWidth="16"/>
-			<ColumnDefinition Width="Auto"/>
-		</Grid.ColumnDefinitions>
+	<Grid Background="Gainsboro" x:Name="MainGrid" MinWidth="100">
+		<Grid>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*"/>
+				<ColumnDefinition Width="Auto"/>
+			</Grid.ColumnDefinitions>
+			
+			<Grid Grid.Column="0">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*"/>
+					<ColumnDefinition Width="2"/>
+					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="32"/>
+					<ColumnDefinition Width="Auto"/>
+				</Grid.ColumnDefinitions>
 
-		<controls:ClickSelectTextBox Margin="4" Grid.Row="0" Grid.Column="0"  x:Name="MainTextBox" BorderThickness="0" KeyDown="OnKeyDown" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
-		
-		<Button  Margin="2" Grid.Row="0" Grid.Column="2" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="&#x2794;" Click="OnSearch" />
-		
-		<Button  Margin="2" Grid.Row="0" Grid.Column="3" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="Aa"       FontWeight="{Binding CaseSensitive, Converter={conv:BoolToFontWeight}}" Click="OnClickCaseSensitive" />
-		<Button  Margin="2" Grid.Row="0" Grid.Column="4" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="|W|"      FontWeight="{Binding WholeWord, Converter={conv:BoolToFontWeight}}"     Click="OnClickWholeWord"/>
-		<Button  Margin="2" Grid.Row="0" Grid.Column="5" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="Regex"    FontWeight="{Binding Regex, Converter={conv:BoolToFontWeight}}"         Click="OnClickCaseRegex"/>
-		
-		<Button  Margin="0,2,2,0" Grid.Row="0" Grid.Column="7" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="x" FontWeight="Bold" Padding="2,0" VerticalAlignment="Top" HorizontalAlignment="Right" Click="OnCloseBox" />
+				<controls:ClickSelectTextBox Margin="4" Grid.Column="0" x:Name="MainTextBox" BorderThickness="0" KeyDown="OnKeyDown" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" />
 
+				<Button  Margin="2" Grid.Column="2" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="&#x2794;" Click="OnSearch" />
+
+				<Button  Margin="2" Grid.Column="3" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="Aa"       FontWeight="{Binding CaseSensitive, Converter={conv:BoolToFontWeight}}" Click="OnClickCaseSensitive" />
+				<Button  Margin="2" Grid.Column="4" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="|W|"      FontWeight="{Binding WholeWord, Converter={conv:BoolToFontWeight}}"     Click="OnClickWholeWord"/>
+				<Button  Margin="2" Grid.Column="5" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="Regex"    FontWeight="{Binding Regex, Converter={conv:BoolToFontWeight}}"         Click="OnClickCaseRegex"/>
+
+			</Grid>
+			
+			<Grid Grid.Column="1">
+
+				<Button  Margin="0,2,2,0" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" Content="x" FontWeight="Bold" Padding="2,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Click="OnCloseBox" />
+
+			</Grid>
+			
+		</Grid>
 	</Grid>
 </UserControl>
