--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -591,7 +591,7 @@
 									<Grid.RowDefinitions>
 										<RowDefinition Height="Auto"/>
 										<RowDefinition Height="Auto"/>
-										<RowDefinition/>
+										<RowDefinition Height="Auto"/>
 									</Grid.RowDefinitions>
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width="1*" />
@@ -605,6 +605,10 @@
 
 									<TextBlock     Grid.Row="1" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Emulated directory seperator" />
 									<ComboBox      Grid.Row="1" Grid.Column="1" Margin="3" ItemsSource="{mext:EnumSource settings:HierachicalStructureSeperator}" SelectedValue="{Binding Settings.HStructureSeperator}" />
+
+									<TextBlock     Grid.Row="2" Grid.Column="0" Margin="3" VerticalAlignment="Center" Text="Show all notes from all subfolder" />
+									<CheckBox      Grid.Row="2" Grid.Column="1" IsChecked="{Binding Settings.DeepFolderView}" VerticalAlignment="Center"/>
+									<ctrl:PHelpBtn Grid.Row="2" Grid.Column="2" HelpProperty="DeepFolderView" Margin="2,0" VerticalAlignment="Center" />
 								</Grid>
 
 							</Grid>
