--- a/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/MainWindow.xaml
@@ -42,9 +42,10 @@
 			<MenuItem Header="File">
 				<ctrl:AutoActionMenuItem Header="New Note" AlephAction="NewNote" Settings="{Binding Settings}"  />
 				<ctrl:AutoActionMenuItem Header="New Note (from clipboard)" AlephAction="NewNoteFromClipboard" Settings="{Binding Settings}"  />
+				<ctrl:AutoActionMenuItem Header="New Note (from text file)" AlephAction="NewNoteFromTextFile" Settings="{Binding Settings}" />
 				<Separator />
-				<ctrl:AutoActionMenuItem Header="Export Note" AlephAction="ExportNote" Settings="{Binding Settings}"  />
-				<ctrl:AutoActionMenuItem Header="Delete Note" AlephAction="DeleteNote"  Settings="{Binding Settings}" />
+				<ctrl:AutoActionMenuItem Header="Export Note" AlephAction="ExportNote" Settings="{Binding Settings}" />
+				<ctrl:AutoActionMenuItem Header="Delete Note" AlephAction="DeleteNote" Settings="{Binding Settings}" />
 				<Separator />
 				<ctrl:AutoActionMenuItem Header="Exit" AlephAction="AppExit" Settings="{Binding Settings}"  />
 			</MenuItem>
