--- a/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
+++ b/Source/AlephNote.App/WPF/Controls/NotesViewFlat.xaml
@@ -54,8 +54,11 @@
 
 			<ListView.ContextMenu>
 				<ContextMenu>
-					<controls:AutoActionMenuItem Header="Export" AlephAction="ExportNote" ParentAnchor="{Binding ParentAnchor}" />
-					<controls:AutoActionMenuItem Header="Delete" AlephAction="DeleteNote" ParentAnchor="{Binding ParentAnchor}" />
+					<self:AutoActionMenuItem Header="Export"      AlephAction="ExportNote"    ParentAnchor="{Binding ParentAnchor}" />
+					<self:AutoActionMenuItem Header="Duplicate"   AlephAction="DuplicateNote" ParentAnchor="{Binding ParentAnchor}" />
+					<self:AutoActionMenuItem Header="Pin / Unpin" AlephAction="PinUnpinNote"  ParentAnchor="{Binding ParentAnchor}" />
+					<Separator />
+					<self:AutoActionMenuItem Header="Delete"      AlephAction="DeleteNote"    ParentAnchor="{Binding ParentAnchor}" />
 				</ContextMenu>
 			</ListView.ContextMenu>
 
@@ -64,8 +67,13 @@
 
 				<services:ConditionalDataTemplate Value="{x:Static settings:NotePreviewStyle.Simple}">
 					<DataTemplate >
-						<Grid   d:DataContext="{d:DesignInstance pi:INote}">
-							<TextBlock Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
+						<Grid d:DataContext="{d:DesignInstance pi:INote}">
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="*"/>
+							</Grid.ColumnDefinitions>
+							<Image Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+							<TextBlock Grid.Column="1" Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
 						</Grid>
 					</DataTemplate>
 				</services:ConditionalDataTemplate>
@@ -74,12 +82,14 @@
 					<DataTemplate>
 						<Grid d:DataContext="{d:DesignInstance pi:INote}">
 							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="Auto" />
 								<ColumnDefinition Width="*" />
 								<ColumnDefinition Width="Auto" />
 								<ColumnDefinition Width="3" />
 							</Grid.ColumnDefinitions>
-							<TextBlock Grid.Column="0" Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
-							<TextBlock Grid.Column="1" Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" VerticalAlignment="Center" Foreground="DimGray" >
+							<Image     Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+							<TextBlock Grid.Column="1" Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
+							<TextBlock Grid.Column="2" Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" VerticalAlignment="Center" Foreground="DimGray" >
 								<TextBlock.LayoutTransform>
 									<ScaleTransform ScaleX="0.9" ScaleY="0.9" />
 								</TextBlock.LayoutTransform>
@@ -98,7 +108,16 @@
 								<RowDefinition Height="Auto" />
 								<RowDefinition Height="Auto" />
 							</Grid.RowDefinitions>
-							<TextBlock Grid.Row="0" FontWeight="Bold" FontStyle="Normal" Foreground="Black" Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
+
+							<Grid Grid.Row="0">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="*"/>
+								</Grid.ColumnDefinitions>
+								<Image     Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+								<TextBlock Grid.Column="1" FontWeight="Bold" FontStyle="Normal" Foreground="Black" Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
+							</Grid>
+
 							<TextBlock Grid.Row="1" TextWrapping="NoWrap">
 								<Run Foreground="Brown" FontWeight="Normal" FontStyle="Normal" Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" />
 								<Run Foreground="DarkGray" FontWeight="Normal" FontStyle="Normal" Text="{Binding Text, Converter={conv:GetLine}, ConverterParameter=0, Mode=OneWay}" />
@@ -122,7 +141,16 @@
 								<RowDefinition Height="Auto" />
 								<RowDefinition Height="Auto" />
 							</Grid.RowDefinitions>
-							<TextBlock Grid.Row="0" FontWeight="Bold" FontStyle="Normal" Foreground="Black" Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
+
+							<Grid Grid.Row="0">
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="Auto"/>
+									<ColumnDefinition Width="*"/>
+								</Grid.ColumnDefinitions>
+								<Image     Grid.Column="0" Source="/Resources/star.png" VerticalAlignment="Center" Visibility="{Binding IsPinned, Converter={conv:BoolToVisibility}, ConverterParameter='Visible;Collapsed'}" />
+								<TextBlock Grid.Column="1" FontWeight="Bold" FontStyle="Normal" Foreground="Black" Text="{Binding Title, Converter={conv:StringCoalesce}, ConverterParameter='New Note...', Mode=OneWay}" TextTrimming="CharacterEllipsis" />
+							</Grid>
+
 							<TextBlock Grid.Row="1" TextWrapping="NoWrap">
 								<Run Foreground="Brown" FontWeight="Normal" FontStyle="Normal" Text="{Binding ModificationDate, Converter={conv:SmallDateTimeToDisplay}, Mode=OneWay}" />
 								<Run Foreground="DarkGray" FontWeight="Normal" FontStyle="Normal" Text="{Binding Text, Converter={conv:GetLine}, ConverterParameter=0, Mode=OneWay}" />
