--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -266,6 +266,7 @@
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 
 								<Grid Grid.Row="0" Grid.Column="0">
@@ -307,8 +308,10 @@
 									<ctrl:PHelpBtn Grid.Column="1" HelpProperty="NoteSorting" Margin="2,0" VerticalAlignment="Center" />
 								</Grid>
 
-								<TextBlock     Grid.Row="2" Grid.Column="0" Margin="5"  Text="Note Preview:"/>
-								<Grid Grid.Row="2" Grid.Column="2">
+								<CheckBox Grid.Row="2" Grid.Column="2" Margin="2" Content="Sort pinned notes to the top"  IsChecked="{Binding Settings.SortByPinned}" />
+
+								<TextBlock     Grid.Row="3" Grid.Column="0" Margin="5"  Text="Note Preview:"/>
+								<Grid Grid.Row="3" Grid.Column="2">
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width="*" />
 										<ColumnDefinition Width="Auto" />
