--- a/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
+++ b/Source/AlephNote.App/WPF/Windows/SettingsWindow.xaml
@@ -154,7 +154,27 @@
 			<TabItem Header="View">
 				<ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
 					<StackPanel Orientation="Vertical">
-						
+
+						<GroupBox Header="General" Padding="4">
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition Width="1*" />
+									<ColumnDefinition Width="10" />
+									<ColumnDefinition Width="1*" />
+								</Grid.ColumnDefinitions>
+								<Grid.RowDefinitions>
+									<RowDefinition Height="Auto" />
+									<RowDefinition Height="Auto" />
+								</Grid.RowDefinitions>
+
+								<TextBlock Grid.Row="0" Grid.Column="0" Margin="5" Text="Theme:"/>
+								<ComboBox  Grid.Row="0" Grid.Column="2" Margin="5" ItemsSource="{Binding AvailableThemes}" SelectedItem="{Binding SelectedTheme}" DisplayMemberPath="Name" />
+
+								<Button    Grid.Row="1" Grid.Column="2" Margin="5,0,5,5" HorizontalAlignment="Right" Content="Open folder" FontStyle="Italic" Padding="5,1" Click="Button_OpenThemeFolder_Click" />
+
+							</Grid>
+						</GroupBox>
+
 						<GroupBox Header="Window" Padding="4">
 							<Grid>
 								<Grid.ColumnDefinitions>
@@ -392,7 +412,6 @@
 
 								<TextBlock Margin="2" Grid.Row="0" Grid.Column="0" Text="Note:" VerticalAlignment="Center" />
 								<ctrl:FontBox  Margin="2" Grid.Row="0" Grid.Column="1" SelectedFont="{Binding Settings.NoteFontFamily}" />
-								<ComboBox  Margin="2" Grid.Row="0" Grid.Column="2" ItemsSource="{mext:EnumSource settings:FontModifier}" SelectedValue="{Binding Settings.NoteFontModifier}"/>
 								<ComboBox  Margin="2" Grid.Row="0" Grid.Column="3" ItemsSource="{mext:EnumSource settings:FontSize}" SelectedValue="{Binding Settings.NoteFontSize}"/>
 								<ctrl:PHelpBtn Grid.Row="0" Grid.Column="4" HelpProperty="NoteFontFamily" Margin="2,0" VerticalAlignment="Center" />
 
